[gd_scene load_steps=11 format=3 uid="uid://df66c83dmhrk3"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_ckw1u"]
[ext_resource type="PackedScene" uid="uid://cpcjetnf84p0x" path="res://scenes/shot.tscn" id="2_41rrg"]
[ext_resource type="Texture2D" uid="uid://brgb8l4i082s" path="res://assets/images/player/player2.png" id="2_nlj1r"]
[ext_resource type="Texture2D" uid="uid://cyblirkff0laa" path="res://assets/images/player/player1.png" id="3_fn31u"]
[ext_resource type="Texture2D" uid="uid://bfd1wwvl1llfy" path="res://assets/images/player/player3.png" id="4_cax0s"]
[ext_resource type="Texture2D" uid="uid://bssau8vqt8xva" path="res://assets/images/flash/flash.png" id="5_8yq8t"]
[ext_resource type="AudioStream" uid="uid://ba05umdrncnnc" path="res://assets/audio/shot 1.wav" id="6_2lhur"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3gmqq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_nlj1r")
}],
"loop": true,
"name": &"Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_fn31u")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_cax0s")
}],
"loop": true,
"name": &"Up",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_5ap5u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_8yq8t")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"Flash",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bmc4k"]
size = Vector2(26, 11)

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_ckw1u")
shot = ExtResource("2_41rrg")

[node name="SpaceShip" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3gmqq")
animation = &"Down"
autoplay = "Idle"

[node name="Flash" type="AnimatedSprite2D" parent="."]
position = Vector2(20, 1)
scale = Vector2(1, 1.02632)
sprite_frames = SubResource("SpriteFrames_5ap5u")
animation = &"Flash"
frame = 1

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bmc4k")

[node name="Settings" type="Node2D" parent="."]

[node name="ShootSpawn" type="Marker2D" parent="Settings"]
position = Vector2(13, 0)

[node name="AudioShot" type="AudioStreamPlayer" parent="Settings"]
stream = ExtResource("6_2lhur")
volume_db = -12.0
